fix: landing page section bug on dark mode

--- a/public/scss/dark-mode/_dark-mode.scss
+++ b/public/scss/dark-mode/_dark-mode.scss
@@ -25,7 +25,11 @@
     }
 
     .feature-text {
-        color: var(--color-primary) !important;;
+        color: var(--color-primary) !important;
+    }
+
+    .desc-dark {
+        color: var(--color-white-dark);
     }
 
     .bg-color-white {
